# apktau

./: .gitignore  manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
apktau/: asgi.py  settings_base.py  urls.py  urls_dev.py  wsgi.py
apktau/settings/: dev.py  prod.py
appstore/: admin.py  models.py  urls.py  views.py
appstore/management/commands/: apps.txt  fetch.py
appstore/migrations/: 0001_initial.py  0002_apps_app_screenshots_alter_apps_app_package_name.py  0003_alter_apps_app_screenshots.py  0004_apps_package_category.py  0005_alter_apps_package_category.py  0006_remove_apps_app_screenshots_apps_screenshot_1_and_more.py  0007_alter_apps_screenshot_1_alter_apps_screenshot_2_and_more.py  0008_remove_apps_screenshot_1_remove_apps_screenshot_2_and_more.py  0009_apps_app_permissions.py  0010_apps_app_reviews_histogram.py
templates/: base.html
templates/appstore/: apps_detail.html
