[tool.poetry]
name = "apktau"
version = "0.1.0"
description = ""
authors = ["Aman Rawat <ar.rawataman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
python-dotenv = "^1.0.1"
dj-database-url = "^2.1.0"
psycopg = "^3.1.18"
django-autoslug = "^1.9.9"
pillow = "^10.2.0"
django-tailwind = "^3.8.0"
google-play-scraper = "^1.2.6"
djangorestframework = "^3.15.1"
markdown = "^3.6"
django-filter = "^24.2"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"
django-browser-reload = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
